<resources>
    <string name="app_name">ImoocRestaurant</string>
    <string name="jump_over">跳过</string>
    <string name="xiaomu_restaurant">小慕餐厅</string>
    <string name="input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="sure">确定</string>
    <string name="mobile_phone_register">手机注册</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="re_input_password">重复输入密码</string>
    <string name="submit">提交</string>
    <string name="register">注册</string>
    <string name="can_not_empty">账号或密码不能为空</string>
    <string name="loading">加载中......</string>
    <string name="login_success">登录成功</string>
    <string name="password_not_same">两次输入的密码不一致！</string>
    <string name="register_success">注册成功</string>
    <string name="nullable">nullable</string>
    <string name="order_dinner">点餐</string>
    <string name="my_order">我的订单</string>
    <string name="mooc_restaurant">小慕餐厅</string>
    <string name="description">相关描述</string>
    <string name="total_cost">共消费：%1$.2f元</string>
    <string name="no_cost">无消费</string>
    <string name="order_description">%1$s等%2$d商品</string>
    <string name="refresh_order_success">更新订单成功~~~</string>
    <string name="user_not_login">用户未登录</string>
    <string name="no_more_orders">没有订单了~~</string>
    <string name="load_orders_success">订单加载成功~</string>
    <string name="count_0">数量：%1$d</string>
    <string name="pay_for_dinner">%1$.2f元 立即支付</string>
    <string name="order">点餐</string>
    <string name="single_product_price">%1$.2f元/份</string>
    <string name="no_more_dish">没有更多的菜品了~~</string>
    <string name="find_out_more_dishes">又找到%1$d菜品~~</string>
    <string name="cancel_dish">已取消该菜品的订购了~~</string>
    <string name="not_choose_dish">未选择任何商品~~</string>
    <string name="create_order_success">生成订单成功~~</string>
    <string name="red_meet">红烧肉</string>
    <string name="dish_detail">菜品详情</string>
    <string name="order_detail">订单详情</string>
    <string name="params_error">参数传递错误！</string>
</resources>
