<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/xiaomu_restaurant"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="40dp"
        android:background="#44FFFFFF"
        android:hint="@string/input_account"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/et_account"
        android:layout_marginTop="4dp"
        android:background="#44FFFFFF"
        android:hint="@string/input_password"
        android:inputType="textWebPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/bt_login"
        style="@style/ButtonLargeBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:text="@string/sure" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/mobile_phone_register"
        android:textColor="#FFFFFF" />

</RelativeLayout>