<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F5F7"
    android:orientation="vertical"
    tools:context=".ui.activity.RegisterActivity">

    <include layout="@layout/common_toolbar" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        android:hint="@string/input_phone_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="8dp"
        android:textColorHint="#000000"
        tools:ignore="RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:hint="@string/input_password"
        android:importantForAutofill="no"
        android:inputType="textWebPassword"
        android:paddingStart="8dp"
        android:textColorHint="#000000"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_re_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:hint="@string/re_input_password"
        android:importantForAutofill="no"
        android:inputType="textWebPassword"
        android:paddingStart="8dp"
        android:textColorHint="#000000"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/bt_register"
        style="@style/ButtonLargeBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:text="@string/submit" />

</LinearLayout>