<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginStart="16dp"
    android:background="@drawable/item_bg"
    android:layout_marginEnd="16dp">

    <ImageView
        android:id="@+id/iv_product"
        android:layout_width="140dp"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription"
        tools:src="@drawable/item_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/iv_product"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/mooc_restaurant"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:maxLines="2"
            tools:text="@string/description" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/iv_product"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/iv_product"
        android:textColor="#FD8F50"
        tools:text="@string/total_cost" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="#444444" />

</RelativeLayout>