<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.OrderActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="#000000">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:src="@drawable/icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:text="@string/nullable" />

        <Button
            android:id="@+id/bt_take_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_bg_orange_corner"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/order_dinner"
            android:textColor="#FFFFFF"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F3F5F7"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/my_order"
        tools:ignore="RtlSymmetry" />

    <mybaidu.admin.example.com.imoocrestaurant.ui.view.refresh.SwipeRefreshLayout
        android:id="@+id/srl_orders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_my_history_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </mybaidu.admin.example.com.imoocrestaurant.ui.view.refresh.SwipeRefreshLayout>

</LinearLayout>